--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ class="vk vk_js_no vk_flex_no r d h vk_appAuth_no"
 <meta name="MobileOptimized" content="176" />
 <meta name="HandheldFriendly" content="True" />
 <base id="base">
-<title>Барно Усманова | ВКонтакте</title>
+<title>Вход | ВКонтакте</title>
 <link rel="shortcut icon" href="https://m.vk.com/images/icons/favicons/fav_logo.ico?6"></link>
 
 <link type="text/css" rel="stylesheet" href="https://m.vk.com/css/s_c.css?546"></link>
